[project]
name = "robusta-krr"
version = "1.8.2-dev"
description = "Robusta's Resource Recommendation engine for Kubernetes"
authors = [{name="Pavel Zhukov", email="<33721692+LeaveMyYard@users.noreply.github.com>"}]
license = "MIT"
readme = "README.md"
packages = [{ include = "robusta_krr" }]
requires-python = "==3.9"
dependencies = [
  "typer[all] ==0.7.0",
  "pydantic ==1.10.15",
  "kubernetes (>=26.1.0,<27.0.0)",
  "prometheus-api-client==0.5.3",
  "numpy (>=1.24.2,<2.0.0)",
  "alive-progress (>=3.1.2,<4.0.0)",
  "prometrix (>=0.1.17,<1.0.0)",
  "slack-sdk (>=3.21.3,<4.0.0)",
]

[project.scripts]
krr = "robusta_krr.main:run"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
plugins = "numpy.typing.mypy_plugin,pydantic.mypy"

[dependency-groups]
dev = [
  "mypy (>=1.0.1,<2.0.0)",
  "black (>=23.1.0,<24.0.0)",
  "isort (>=5.12.0,<6.0.0)",
  "flake8 (>=6.0.0,<7.0.0)",
  "types-pyyaml (>=6.0.12.8,<7.0.0)",
  "types-cachetools (>=5.3.0.4,<6.0.0)",
  "types-requests (>=2.28.11.15,<3.0.0)",
  "pyinstaller (>=5.9.0,<6.0.0)",
  "pytest (>=7.2.2,<8.0.0)",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
